# CBLens

./: .gitignore  AGENTS.md  CB.py  CLAUDE.md  LICENSE  README.md  backtest.py  data_providers.py  gui.py  patch.py  pyi_rth_network.py  pyi_rth_windpy.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/rules/: batch-pricing.md  data-layer.md  pricing-engine.md  testing.md
.codex/environments/: environment.toml
.github/workflows/: build-desktop.yml  ci.yml
convertible_bond/: __init__.py  admission_status.py  announcement_pdf.py  backtest.py  backtest_disk_cache.py  backtest_stats.py  batch_pricing.py  cache.py  cb_data_sync.py  cb_event_sync.py  cb_events.py  cninfo_provider.py  data_providers.py  dateutil.py  desktop_diagnostics.py  down_reset_overrides.py  historical_terms.py  market_valuation.py  model_defaults.py  paths.py  pricer.py  pricing_api.py  sensitivity.py  signal_eval.py  strategy_backtest.py  watchlist.py
convertible_bond/cli/: backfill_delisted_cbs.py  backfill_down_reset_patches.py  calibrate_down_reset.py  market_valuation.py  screen_pool.py  strategy_backtest.py  sync_admission_status.py  sync_events.py  sync_terms.py  sync_tradable.py
convertible_bond/data_providers/: __init__.py  _helpers.py  akshare.py  auto.py  base.py  csv_provider.py  wind.py
convertible_bond/gui/: __init__.py  app.py  constants.py  theme.py  widgets.py
convertible_bond/gui/controllers/: __init__.py  backtest.py  down_reset.py  events.py  pricing.py  sensitivity.py  strategy_backtest.py  strategy_common.py  strategy_compare.py  strategy_render.py  strategy_render_analysis.py  strategy_run.py  strategy_setup.py  strategy_snapshots.py  wind_sync.py
convertible_bond/gui/tabs/: __init__.py  backtest.py  batch.py  batch_common.py  batch_watchlist.py  pricing.py  sensitivity.py  strategy.py
data/: README.md  batch_pricing_cache.json  cb_data.json  cb_events.json  cb_terms_patches.json  cb_valuation_history.json  down_reset_overrides.json  strategy_backtest_snapshot.json  watchlist.json
data/cb_data_history/: 2026-06-12.json
data/strategy_backtest_snapshots/: strategy_backtest_2025-05-28_2026-05-28_Q_top10_20260529-000612.json  strategy_backtest_2025-05-30_2026-05-30_M_top10_20260601-checked-current.json
docs/: BRAND.md  USAGE.md  marketing_posts.md
docs/research/: 2026-06-score-ic-and-valuation-timing.md
gui/: __init__.py  app.py  widgets.py
gui/tabs/: backtest.py  batch.py  pricing.py  sensitivity.py
output/: analyze_down_reset_probability.py  down_reset_cninfo_announcements_20210525_20260525.csv  down_reset_episodes_20210525_20260525.csv  down_reset_probability_report_20210525_20260525.md  down_reset_probability_summary_20210525_20260525.json  down_reset_trigger_followups_20210525_20260525.csv
scripts/: build_desktop.py  release_macos_desktop.py
tests/: test_admission_status.py  test_akshare_provider.py  test_backtest_disk_cache.py  test_backtest_stats.py  test_batch_common.py  test_batch_pricing.py  test_build_desktop.py  test_cache.py  test_cb_events.py  test_cli_market_valuation.py  test_cninfo_provider.py  test_down_reset_state_defaults.py  test_gui_backtest_controller.py  test_historical_terms.py  test_market_valuation.py  test_paths.py  test_pricer.py  test_pricing_api.py  test_sensitivity.py  test_signal_eval.py  test_strategy_backtest.py  test_watchlist.py  test_wind_provider.py
