[project]
name = "convertible-bond-pricer"
version = "1.0.0"
description = "CBLens: A 股可转债定价与机会筛选工作台，支持 Crank-Nicolson PDE、公告事件、Wind/akshare 和 GUI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["convertible-bond", "pricing", "pde", "wind", "akshare", "quant"]
dependencies = [
    "customtkinter>=5.2.2",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "scipy>=1.14",
    "pillow>=10.0",
    "akshare>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cb-gui = "convertible_bond.gui.app:main"
cb-screen-pool = "convertible_bond.cli.screen_pool:main"
cb-sync-admission-status = "convertible_bond.cli.sync_admission_status:main"
cb-sync-events = "convertible_bond.cli.sync_events:main"
cb-sync-tradable = "convertible_bond.cli.sync_tradable:main"
cb-sync-terms = "convertible_bond.cli.sync_terms:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
